# apps/api/src/modules/ai/dtos/narrative-response.dto.ts
@@ -1,7 +1,0 @@
-export class NarrativeResponseDto {
-  narrative!: string;
-
-  static from(narrative: string): NarrativeResponseDto {
-    return { narrative };
-  }
-}
